syntax = "proto3";

option csharp_namespace = "grpc_code_gen.post";
option java_package = "grpc_code_gen.post";

package post;

import "get_one.proto";
import "get_all.proto";
import "get_all_sha256.proto";
import "create.proto";
import "update.proto";
import "delete.proto";

service PostService {
  rpc GetOne (get_one.Req) returns (get_one.Rsp);
  rpc GetAll (get_all.Req) returns (get_all.Rsp);
  rpc GetAllSha256 (get_all_sha256.Req) returns (get_all_sha256.Rsp);

  rpc Create (create.Req) returns (create.Rsp);
  rpc Update (update.Req) returns (update.Rsp);
  rpc Delete (delete.Req) returns (delete.Rsp);
}
